<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>676</width>
    <height>414</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QTabWidget" name="mainTab">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>811</width>
      <height>591</height>
     </rect>
    </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <property name="currentIndex">
     <number>0</number>
    </property>
    <widget class="QWidget" name="runTab">
     <attribute name="title">
      <string>실행</string>
     </attribute>
     <widget class="QPushButton" name="runAllBtn">
      <property name="geometry">
       <rect>
        <x>40</x>
        <y>30</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="text">
       <string>실행</string>
      </property>
     </widget>
     <widget class="QPushButton" name="stopBtn">
      <property name="geometry">
       <rect>
        <x>40</x>
        <y>210</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="text">
       <string>정지</string>
      </property>
     </widget>
     <widget class="QPushButton" name="leftBtn">
      <property name="geometry">
       <rect>
        <x>250</x>
        <y>30</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="text">
       <string>좌측이동</string>
      </property>
     </widget>
     <widget class="QPushButton" name="upBtn">
      <property name="geometry">
       <rect>
        <x>250</x>
        <y>210</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="text">
       <string>상측이동</string>
      </property>
     </widget>
     <widget class="QPushButton" name="rightBtn">
      <property name="geometry">
       <rect>
        <x>450</x>
        <y>30</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="text">
       <string>우측이동</string>
      </property>
     </widget>
     <widget class="QPushButton" name="downBtn">
      <property name="geometry">
       <rect>
        <x>450</x>
        <y>210</y>
        <width>141</width>
        <height>91</height>
       </rect>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="text">
       <string>하측이동</string>
      </property>
     </widget>
    </widget>
    <widget class="QWidget" name="viewTab">
     <attribute name="title">
      <string>화면보기</string>
     </attribute>
     <widget class="QLabel" name="firstLbl">
      <property name="geometry">
       <rect>
        <x>60</x>
        <y>20</y>
        <width>211</width>
        <height>121</height>
       </rect>
      </property>
      <property name="text">
       <string>tbl1</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
     <widget class="QPushButton" name="refreshBtn">
      <property name="geometry">
       <rect>
        <x>420</x>
        <y>50</y>
        <width>111</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
       <string>갱신</string>
      </property>
     </widget>
     <widget class="QLabel" name="secondLbl">
      <property name="geometry">
       <rect>
        <x>60</x>
        <y>180</y>
        <width>211</width>
        <height>121</height>
       </rect>
      </property>
      <property name="text">
       <string>tbl1</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
     <widget class="QLabel" name="thirdLbl">
      <property name="geometry">
       <rect>
        <x>360</x>
        <y>180</y>
        <width>211</width>
        <height>121</height>
       </rect>
      </property>
      <property name="text">
       <string>tbl1</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </widget>
    <widget class="QWidget" name="tab">
     <attribute name="title">
      <string>물품 정보</string>
     </attribute>
     <widget class="QTableWidget" name="statustable">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
        <width>651</width>
        <height>331</height>
       </rect>
      </property>
      <property name="rowCount">
       <number>20</number>
      </property>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <row/>
      <column>
       <property name="text">
        <string>Item no.</string>
       </property>
       <property name="font">
        <font>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
      </column>
      <column>
       <property name="text">
        <string>status</string>
       </property>
       <property name="font">
        <font>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
      </column>
      <column>
       <property name="text">
        <string>time</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Place</string>
       </property>
      </column>
     </widget>
    </widget>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>676</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
